tests/dev_server/errors/stories/js_module_top_level_await_then_throw/file.js
await new Promise((resolve) => setTimeout(resolve, 1000))

throw new Error("here")
